--- a/CountDown/css/style.css
+++ b/CountDown/css/style.css
@@ -153,7 +153,7 @@ button:hover {
 
 /*--//wrapper--*/
 .coming-page-infohny {
-    background: url(../images/IMG_2021.JPG) no-repeat center;
+    background: url(../images/DSC_8730.JPG) no-repeat center;
     background-size: cover;
     -webkit-background-size: cover;
     -moz-background-size: cover;
